\name{NEWS}
\title{NEWS file for the \code{\link[=ergm.count-package]{ergm.count}} package}
\encoding{UTF-8}

% When a release is forked, copy the sections to a new release and
% delete unused sections.
\section{Changes in version 3.1}{

  \subsection{THIS IS AN INITIAL RELEASE}{
    \itemize{
      \item Although this is an initial release, it is depends very heavily on
      the \code{\link[=ergm-package]{ergm}} package version 3.1, and it is
      thus numbered 3.1.
    }
  }
  
  \subsection{NEW FEATURES}{
    \itemize{
      \item A number of reference measures for count data have been
      implemented. See \code{? 'ergm.count-package'} and \code{? 'ergm-references'} for help.
    } 
  }
  
  % \subsection{OTHER USER-VISIBLE CHANGES}{
  %   \itemize{
  %   }
  % }

  % \subsection{C-LEVEL FACILITIES}{
  %   \itemize{
  %     \item It is not clear that we need a subsection called "C-LEVEL FACILITIES".
  %   }
  % }

  % \subsection{UTILITIES}{
  %   \itemize{
  %     \item Likewise, "UTILITIES" is probably unnecessary.
  %   }
  % }

  % \subsection{INSTALLATION}{
  %   \itemize{
  %     \item ... as is "INSTALLATION".
  %   }
  % }

  % \subsection{PACKAGE INSTALLATION}{
  %   \itemize{
  %     \item ditto.
  %   }
  % }

  % \subsection{DEPRECATED & DEFUNCT}{
  %   \itemize{
  %   }
  % }

  % \subsection{BUG FIXES}{
  %   \itemize{
  %   }
  % }
}