@@ -1,3 +1,12 @@
+#  File R/InitWtMHP.R in package ergm.count, part of the Statnet suite
+#  of packages for network analysis, http://statnet.org .
+#
+#  This software is distributed under the GPL-3 license.  It is free,
+#  open source, and has the attribution requirements (GPL Section 7) at
+#  http://statnet.org/attribution
+#
+#  Copyright 2003-2013 Statnet Commons
+#######################################################################
 InitWtMHP.Poisson <- function(arguments, nw, response) {
   MHproposal <- list(name = "Poisson", inputs=NULL)
   MHproposal
